Inicio de control de cambios.

--- a/POSServices/POSServices.csproj
+++ b/POSServices/POSServices.csproj
@@ -182,11 +182,22 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\ArticleController.cs" />
+    <Compile Include="Controllers\GroupsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\SectionController.cs" />
+    <Compile Include="Controllers\VirtualQueueController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Connection.cs" />
+    <Compile Include="Models\Data\Article.cs" />
+    <Compile Include="Models\Data\Client.cs" />
+    <Compile Include="Models\Data\Group.cs" />
+    <Compile Include="Models\Data\Sale.cs" />
+    <Compile Include="Models\Data\SaleArea.cs" />
+    <Compile Include="Models\Request\RequestUpdateVirtualQueueStatus.cs" />
+    <Compile Include="Models\Response\BasicResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -245,7 +256,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
