--- a/POSServices/POSServices.csproj
+++ b/POSServices/POSServices.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Models\Data\Device.cs" />
     <Compile Include="Models\Data\ElectronicPaymentType.cs" />
     <Compile Include="Models\Data\ElectronicPayment.cs" />
+    <Compile Include="Models\Data\Fingerprint.cs" />
     <Compile Include="Models\Data\Group.cs" />
     <Compile Include="Models\Data\Sale.cs" />
     <Compile Include="Models\Data\SaleArea.cs" />
