--- a/POSServices/POSServices.csproj
+++ b/POSServices/POSServices.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Controllers\DeviceController.cs" />
     <Compile Include="Controllers\GroupsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MovementController.cs" />
     <Compile Include="Controllers\RequestController.cs" />
     <Compile Include="Controllers\SaleController.cs" />
@@ -220,6 +221,7 @@
     <Compile Include="Models\Data\WorkingDay.cs" />
     <Compile Include="Models\Request\RequestDeleteVirtualQueueClientProducts.cs" />
     <Compile Include="Models\Request\RequestGetDevice.cs" />
+    <Compile Include="Models\Request\RequestLogin.cs" />
     <Compile Include="Models\Request\RequestSaveMigrationArticle.cs" />
     <Compile Include="Models\Request\RequestSaveMovement.cs" />
     <Compile Include="Models\Request\RequestSaveRequest.cs" />
@@ -227,6 +229,7 @@
     <Compile Include="Models\Request\RequestUpdateSaleStatus.cs" />
     <Compile Include="Models\Request\RequestUpdateVirtualQueueStatus.cs" />
     <Compile Include="Models\Response\BasicResponse.cs" />
+    <Compile Include="Models\Tools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
